# benchmarks

./: .gitignore  .gitmodules  Custom-stuffs.md  README.md  experiments.sh  lsyncd.seeweb.conf  pyproject.toml  requirements-calamari.txt  requirements-kraken.txt  run.sh  run_help.txt  setup_environments.sh  test.sh  tour.html  tour.md  tour_state.json
benchmarking/: analyze_results.py  annotation_stats.py  bgk_omr.py  bgk_postprocess.py  duplicate_guard.py  evaluation.py  find_model.py  generate_plots.py  generate_plots_trocr_large_yolov8n.py  generate_pretrain_data.py  generate_tables.py  models.json  pretrain_catmus.py  run_pipeline_benchmark.py  run_single_fold_benchmark.py  ultralytics_monkey_patch.py  utils.py
benchmarking/annotations/: ann_handler.py  bibliotecaitaliana.py  data_synthesis.py  gregobase.py
benchmarking/train_test/: train_test_bgk.py  train_test_calamari.py  train_test_detr.py  train_test_doclayout_yolo.py  train_test_dtrocr.py  train_test_faster_rcnn.py  train_test_kraken.py  train_test_paddleocr_vl.py  train_test_trocr.py  train_test_vlt.py  train_test_yolo.py
results/tables/: sequential_in_manuscript_auc_layout_I-Ct_91_I-Fn_BR_18.csv  sequential_synthetic_pretraining_auc_layout_I-Ct_91_I-Fn_BR_18.csv
results/tables/I-Ct_91/: 5fold_layout_I-Ct_91.csv  5fold_ocr_omr_I-Ct_91.csv  sequential_cross_manuscript_auc_layout_I-Ct_91_I-Fn_BR_18.csv  sequential_cross_manuscript_auc_ocr_omr_I-Ct_91_I-Fn_BR_18.csv  sequential_in_manuscript_auc_ocr_omr_I-Ct_91.csv  sequential_synthetic_pretraining_auc_ocr_omr_I-Ct_91.csv  train_test_layout_I-Ct_91_I-Fn_BR_18.csv  train_test_ocr_omr_I-Ct_91_I-Fn_BR_18.csv
results/tables/I-Fn_BR_18/: 5fold_layout_I-Fn_BR_18.csv  5fold_ocr_omr_I-Fn_BR_18.csv  sequential_cross_manuscript_auc_layout_I-Fn_BR_18_I-Ct_91.csv  sequential_cross_manuscript_auc_ocr_omr_I-Fn_BR_18_I-Ct_91.csv  sequential_in_manuscript_auc_ocr_omr_I-Fn_BR_18.csv  sequential_synthetic_pretraining_auc_ocr_omr_I-Fn_BR_18.csv  train_test_layout_I-Fn_BR_18_I-Ct_91.csv  (+1 more)
templates/: gregorio_template.tex
(+1071 files in other folders)
