[project]
name = "laudaredataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "albumentations>=2.0.8",
  "augraphy>=8.2.6",
  "datasets>=5.0.0",
  "dtrocr",
  "fastwer>=0.1.3",
  "jinja2>=3.1.4",
  "lxml>=5.3.2",
  "protobuf>=6.33.5",
  "pybind11>=2.13.6",
  "pycocotools>=2.0.11",
  "pymupdf>=1.26.3",
  "pyyaml>=6.0.2",
  "rapidfuzz>=3.14.5",
  "requests>=2.32.3",
  "requests-cache>=1.2.1",
  "scikit-learn>=1.8.0",
  "sentencepiece>=0.2.1",
  "tiktoken>=0.12.0",
  "timm>=1.0.19",
  "torchvision>=0.22.1",
  "transformers[torch]>=5.0.0",
  "ultralytics>=8.3.204",
  "werpy>=3.3.0",
]

[tool.uv.sources]
fastwer = { git = "https://github.com/00sapo/fastwer.git", rev = "9cc6bd33bfa2f0912f04f87eb29cb9816da0bf99" }
augraphy = { git = "https://github.com/sparkfish/augraphy" }
dtrocr = { git = "https://github.com/00sapo/DTrOCR.git", rev = "68967e1b76f45fec18cde4db469152f833d228e1" }

[dependency-groups]
dev = ["ipdb>=0.13.13", "notebook>=7.3.3", "py-spy>=0.4.0"]
